smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/maps/map-invalid-member.smithy
// Syntax error at line 7, column 3: Expected RBRACE('}') but found IDENTIFIER('fuzz') | Model
namespace com.foo

map MyMap {
  key: smithy.api#String,
  value: smithy.api#String,
  fuzz: smithy.api#String,
}
